[metadata]
name = tenable_mirror
version = 0.1.0
description = Create local package repository of Tenable Nessus Agent packages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/oasys/tenable-mirror
author = Jason Lavoie
author_email = jason@oasys.net
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
include_package_data = True
keywords = tenable_mirror
python_requires = >=3.6

[options]
packages = find:
install_requires =
    deb-pkg-tools
    pyTenable
python_requires = >=3.6

[options.entry_points]
console_scripts =
    mirror-tenable = tenable_mirror.agent:main

[bdist_wheel]
universal = 1
